Transaction flow skeleton
